--- a/company.html
+++ b/company.html
@@ -49,13 +49,13 @@
     </div>
 
     <div class="info-item">
-      <img src="images/phone.svg" alt="휴대폰 아이콘" />
+      <img src="images/PHONE.svg" alt="휴대폰 아이콘" />
       <strong>PHONE</strong>
       <p class="address">010-2528-1625</p>
     </div>
 
     <div class="info-item">
-      <img src="images/tel.svg" alt="전화 아이콘" />
+      <img src="images/TEL.svg" alt="전화 아이콘" />
       <strong>TEL</strong>
       <p class="address">054-977-1625</p>
     </div>
@@ -87,6 +87,6 @@
   
   <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
   <script src="company.js"></script>
-  
+
 </body>
 </html>
