--- a/index.html
+++ b/index.html
@@ -4,15 +4,22 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="format-detection" content="telephone=no">
   <title>진양테크</title>
   <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="base.css" />
+  <link rel="stylesheet" href="mobile.css" />
 </head>
 <body>
 
 <header>
   <div class="logo">
     <a href="index.html"><img src="images/color_logo.svg" alt="JINYANGTECH"></a>
+  </div>
+  <div class="hamburger" onclick="document.querySelector('.nav-links').classList.toggle('active')">
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
   <ul class="nav-links">
     <li><a href="#">중앙집중식 청소기</a>
@@ -63,8 +70,8 @@
 </section>
 
 <section class="section">
-  <h2>조용히, 강력히, 완벽히.</h2>
-  <p class="lead">눈에 보이지 않아도 청소 결과는 확실합니다.</p>
+  <h2 class="fade-in">조용히, 강력히, 완벽히.</h2>
+  <p class="lead fade-in">눈에 보이지 않아도 청소 결과는 확실합니다.</p>
   <div class="cards">
     <div class="card">
       <img src="images/cotton.jpg" alt="강력한 흡입력">
@@ -83,14 +90,14 @@
     </div>
   </div>
 </section>
-    <footer>
-      <img src="images/black_logo.svg" alt="JINYANGTECH 로고">
-      <div class="info">
-        <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
-        <p>PHNOE : 010 - 2528 - 1625 | TEL : 054 - 977 - 1624</p>
-        <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622 | </p>
-      </div>
-    </footer>
+<footer>
+  <img src="images/black_logo.svg" alt="JINYANGTECH 로고">
+  <div class="info">
+    <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
+    <p>PHNOE : 010 - 2528 - 1625 | TEL : 054 - 977 - 1624</p>
+    <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622 | </p>
+  </div>
+  </footer>
 
 <script src="index.js"></script>
 
