main edit or mobile plus

--- a/index.html
+++ b/index.html
@@ -29,12 +29,7 @@
       </ul>
     </li>
     <li><a href="supplies_1.html">소모품</a></li>
-    <li><a href="company.html">회사소개</a>
-      <ul>
-        <li><a href="projects.html">공사 실적</a></li>
-        <li><a href="location.html">오시는 길</a></li>
-      </ul>
-    </li>
+    <li><a href="company.html">회사소개</a></li>
   </ul>
 </header>
 
@@ -90,14 +85,14 @@
     </div>
   </div>
 </section>
-<footer>
-  <img src="images/black_logo.svg" alt="JINYANGTECH 로고">
-  <div class="info">
-    <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
-    <p>PHNOE : 010 - 2528 - 1625 | TEL : 054 - 977 - 1624</p>
-    <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622 | </p>
-  </div>
-  </footer>
+    <footer>
+      <img src="images/black_logo.svg" alt="JINYANGTECH 로고">
+      <div class="info">
+        <p>회사명 : 진양테크 | 주소 : 경북 칠곡군 기산면 영리1길 14</p>
+        <p>PHNOE : 010 - 2528 - 1625 | TEL : 054 - 977 - 1624</p>
+        <p>이메일: kdgk331@hanmail.net | FAX: 054-977-1622 | </p>
+      </div>
+    </footer>
 
 <script src="index.js"></script>
 
