mobile menu plus

--- a/company.html
+++ b/company.html
@@ -5,26 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>오시는 길</title>
   <link rel="stylesheet" href="base.css" />
+  <link rel="stylesheet" href="index.css" />
+  <link rel="stylesheet" href="mobile.css" />
   <link rel="stylesheet" href="company.css" />
 </head>
 
 <body>
-  <!-- 헤더 -->
-  <header>
-    <div class="logo">
-      <a href="index.html"><img src="images/color_logo.svg" alt="JINYANGTECH" /></a>
-    </div>
-    <ul class="nav-links">
-      <li><a href="#">중앙집중식 청소기</a>
-        <ul>
-          <li><a href="product-intro_1.html">제품소개</a></li>
-          <li><a href="product-types.html">제품종류 및 사양</a></li>
-        </ul>
-      </li>
-      <li><a href="supplies_1.html">소모품</a></li>
-      <li><a href="company.html">회사소개</a></li>
-    </ul>
-  </header>
+  <!-- ✅ 헤더 -->
+<header>
+  <div class="logo">
+    <a href="index.html"><img src="images/color_logo.svg" alt="JINYANGTECH"></a>
+  </div>
+
+  <!-- ✅ 메뉴 열기용 햄버거 버튼 -->
+  <div class="hamburger open-hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
+  <!-- ✅ PC용 메뉴 -->
+  <ul class="nav-links">
+    <li><a href="#">중앙집중식 청소기</a>
+      <ul>
+        <li><a href="product-intro_1.html">- 제품소개</a></li>
+        <li><a href="product-types.html">- 제품구성</a></li>
+      </ul>
+    </li>
+    <li><a href="supplies_1.html">소모품</a></li>
+    <li><a href="company.html">회사소개</a></li>
+  </ul>
+</header>
+
+<!-- ✅ 모바일 메뉴 -->
+<div class="mobile-menu">
+  <!-- ✅ 메뉴 닫기용 햄버거 버튼 -->
+  <div class="hamburger close-hamburger">
+    <span></span>
+    <span></span>
+    <span></span>
+  </div>
+
+  <ul class="mobile-nav">
+    <li>
+      <button class="dropdown-btn">중앙집중식 청소기</button>
+      <ul class="dropdown-content">
+        <li><a href="product-intro_1.html">- 제품소개</a></li>
+        <li><a href="product-types.html">- 제품구성</a></li>
+      </ul>
+    </li>
+    <li><a href="supplies_1.html">소모품</a></li>
+    <li><a href="company.html">회사소개</a></li>
+  </ul>
+</div>
+
 
   <!-- 회사 이미지 -->
   <section class="location-hero">
@@ -87,6 +121,6 @@
   
   <script charset="UTF-8" class="daum_roughmap_loader_script" src="https://ssl.daumcdn.net/dmaps/map_js_init/roughmapLoader.js"></script>
   <script src="company.js"></script>
-
+  <script src="mobile.js"></script>
 </body>
 </html>
