--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="base.css" />
   <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="mobile.css" />
-</head>
+</head><search></search>
 <body>
 
 <!-- ✅ 헤더 -->
