--- a/product-intro_3.html
+++ b/product-intro_3.html
@@ -75,14 +75,14 @@
       <a href="product-intro_4.html" >제품 사용방법</a>
     </nav>
 
+    <!--모바일용 이미지-->
     <div class="benefit-container">
-      <!-- PC용 백그라운드 (기존 SVG) + 모바일용 교체 -->
-      <picture>
-        <source srcset="images/good_2_mobile.png" media="(max-width: 768px)" />
-        <img src="images/good_2.svg" alt="중앙 청소기 본체" class="background-image" />
-      </picture>
+    <picture>
+      <source srcset="images/good_1.svg" media="(max-width: 768px)" />
+      <img src="images/good_2.svg" alt="중앙 청소기 본체" class="background-image" />
+    </picture>
 
-      <!-- 점 설명 텍스트 -->
+      <!-- PC전용 점 설명 텍스트 -->
       <div class="benefit-item top">강력한 흡입력<br><small>강력한 흡입력으로<br>미세먼지, 세균 제거</small></div>
       <div class="benefit-item top-right">조용한 청소<br><small>저소음 설계로 청소<br>중에도 조용함 유지</small></div>
       <div class="benefit-item right">경제성<br><small>연 1~2회 집진통<br>비우는 간편함</small></div>
