--- a/supplies_2.html
+++ b/supplies_2.html
@@ -81,84 +81,91 @@
         <div class="tool-image-box">
           <img src="images/B_1.png" alt="배관 파이프 (HCVC-028)">
         </div>
-        <p>배관 파이프 (HCVC-028)</p>
+        <p>배관 파이프</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
           <img src="images/B_2.png" alt="무90&deg; LONG ELBOW (HCVC-019)">
         </div>
-        <p>90&deg; LONG ELBOW (HCVC-019)</p>
+        <p>90&deg; LONG ELBOW</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
           <img src="images/B_3.png" alt="45&deg; ELBOW (HCVC-020)">
         </div>
-        <p>45&deg; ELBOW (HCVC-020)</p>
+        <p>45&deg; ELBOW</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
           <img src="images/B_4.png" alt="90&deg; SHORT ELBOW (HCVC-018)">
         </div>
-        <p>90&deg; SHORT ELBOW (HCVC-018)</p>
+        <p>90&deg; SHORT ELBOW</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
           <img src="images/B_5.png" alt="90&deg; Y-T (HCVC-017)">
         </div>
-        <p>90&deg; Y-T (HCVC-017)</p>
+        <p>90&deg; Y-T</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
           <img src="images/B_6.png" alt="SLEEVES PLATE (HCVC-031)">
         </div>
-        <p>SLEEVES PLATE (HCVC-031)</p>
+        <p>SLEEVES PLATE</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
           <img src="images/B_7.png" alt="INLET VALE (B형) (HCVC-013)">
         </div>
-        <p>INLET VALE (B형) (HCVC-013)</p>
+        <p>INLET VALE</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
           <img src="images/B_8.png" alt="MOUNTING PLATE (HCVC-026)">
         </div>
-        <p>MOUNTING PLATE (HCVC-026)</p>
+        <p>MOUNTING PLATE</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
           <img src="images/B_9.png" alt="VACPAN (HCVC-001)">
         </div>
-        <p>VACPAN (HCVC-001)</p>
+        <p>VACPAN (A형)</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
-          <img src="images/B_10.png" alt="COUPLING (HCVC-021)">
+          <img src="images/B_10.png" alt="VACPAN (HCVC-001)">
         </div>
-        <p>COUPLING (HCVC-021)</p>
+        <p>VACPAN (B형)</p>
       </div>
 
       <div class="tool-item">
         <div class="tool-image-box">
-          <img src="images/B_11.png" alt="VALVE EXTENTION (HCVC-025)">
+          <img src="images/B_11.png" alt="COUPLING (HCVC-021)">
         </div>
-        <p>VALVE EXTENTION (HCVC-025)</p>
+        <p>COUPLING</p>
+      </div>
+
+      <div class="tool-item">
+        <div class="tool-image-box">
+          <img src="images/B_12.png" alt="VALVE EXTENTION (HCVC-025)">
+        </div>
+        <p>PIPECAP</p>
       </div>
      
       <div class="tool-item">
         <div class="tool-image-box">
-          <img src="images/B_12.png" alt="VACPAN (HCVC-001)">
+          <img src="images/B_13.png" alt="VACPAN (HCVC-001)">
         </div>
-        <p>VACPAN (HCVC-001)</p>
+        <p>VAALVE EXTENTION</p>
       </div>
   </div>
 </section>
