--- a/index.html
+++ b/index.html
@@ -17,30 +17,40 @@
   <div class="logo">
     <a href="index.html"><img src="images/color_logo.svg" alt="JINYANGTECH"></a>
   </div>
-
-  <!-- ✅ 메뉴 열기용 햄버거 버튼 -->
   <div class="hamburger open-hamburger">
     <span></span>
     <span></span>
     <span></span>
   </div>
-
-  <!-- ✅ PC용 메뉴 -->
   <ul class="nav-links">
-    <li><a href="#">중앙집중식 청소기</a>
+    <li>
+      <a href="#">중앙집중식 청소기</a>
       <ul>
-        <li><a href="product-intro_1.html">- 제품소개</a></li>
-        <li><a href="product-types.html">- 제품구성</a></li>
+        <li>
+          <a href="product-intro_1.html">제품소개</a>
+          <ul>
+            <li><a href="product-intro_1.html">중앙집중식 청소기</a></li>
+            <li><a href="product-intro_2.html">제품 구성도</a></li>
+            <li><a href="product-intro_3.html">제품 장점</a></li>
+            <li><a href="product-intro_4.html">제품 사용방법</a></li>
+          </ul>
+        </li>
+        <li><a href="product-types.html">제품종류</a></li>
       </ul>
     </li>
-    <li><a href="supplies_1.html">소모품</a></li>
+    <li>
+      <a href="#">소모품</a>
+      <ul>
+        <li><a href="supplies_1.html">TOOL SET(악세서리)</a></li>
+        <li><a href="supplies_2.html">배관자재</a></li>
+      </ul>
+    </li>
     <li><a href="company.html">회사소개</a></li>
   </ul>
 </header>
 
 <!-- ✅ 모바일 메뉴 -->
 <div class="mobile-menu">
-  <!-- ✅ 메뉴 닫기용 햄버거 버튼 -->
   <div class="hamburger close-hamburger">
     <span></span>
     <span></span>
@@ -51,11 +61,27 @@
     <li>
       <button class="dropdown-btn">중앙집중식 청소기</button>
       <ul class="dropdown-content">
-        <li><a href="product-intro_1.html">- 제품소개</a></li>
-        <li><a href="product-types.html">- 제품구성</a></li>
+        <li>
+          <button class="sub-dropdown-btn">제품소개</button>
+          <ul class="sub-dropdown-content">
+            <li><a href="product-intro_1.html">중앙집중식 청소기</a></li>
+            <li><a href="product-intro_2.html">제품 구성도</a></li>
+            <li><a href="product-intro_3.html">제품 장점</a></li>
+            <li><a href="product-intro_4.html">제품 사용방법</a></li>
+          </ul>
+        </li>
+        <li><a href="product-types.html">제품종류</a></li>
       </ul>
     </li>
-    <li><a href="supplies_1.html">소모품</a></li>
+
+    <li>
+      <button class="dropdown-btn">소모품</button>
+      <ul class="dropdown-content">
+        <li><a href="supplies_1.html">TOOL SET(악세서리)</a></li>
+        <li><a href="supplies_2.html">배관자재</a></li>
+      </ul>
+    </li>
+
     <li><a href="company.html">회사소개</a></li>
   </ul>
 </div>
