--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="format-detection" content="telephone=no">
-  <title>진양테크</title>
+  <title>진양테크 | 중앙집중식 청소기 · 전열교환기</title>
+  <meta name="description" content="중앙집중식 청소기와 전열교환기 전문 진양테크. 조용하고 쾌적한 청소 환경을 제공합니다.">
+  <meta name="keywords" content="
+    진양테크, 진양 테크, JINYANGTECH, JINYANG TECH,
+    중앙집중식 청소기, 중앙집중식청소기, 중앙 청소기, 중앙집중 청소기, central vacuum system, 중앙 흡입 청소기,
+    중앙집중식 청소기 진양테크, 진양테크 중앙집중식 청소기, 중앙집중식청소기 진양테크, 진양테크 중앙집중식청소기, 중앙집중식청소기진양테크, 중앙청소기 진양테크,
+    전열교환기, 전열 교환기, 환기용 전열교환기, 주택용 전열교환기, 전열환기장치, 열회수환기장치, ERV 시스템,
+    전열교환기 진양테크, 진양테크 전열교환기, 전열교환기진양테크, 진양테크 전열환기, ERV 진양테크
+    ">
+  <meta name="robots" content="index, follow">
+  <meta property="og:title" content="진양테크 - 중앙집중식 청소기 전문">
+  <meta property="og:description" content="중앙집중식 청소기와 전열교환기 전문 진양테크의 공식 홈페이지입니다.">
+  <meta property="og:url" content="https://진양테크.kr">
+
   <link rel="stylesheet" href="base.css" />
   <link rel="stylesheet" href="index.css" />
   <link rel="stylesheet" href="mobile.css" />
