--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="format-detection" content="telephone=no">
+  <meta name="naver-site-verification" content="5bd240ba01cb20645ef8debca36da44d5baa4f28" />
   <title>진양테크 | 중앙집중식 청소기 · 전열교환기</title>
   <meta name="description" content="중앙집중식 청소기와 전열교환기 전문 진양테크. 조용하고 쾌적한 청소 환경을 제공합니다.">
   <meta name="keywords" content="
