--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="중앙집중식 청소기와 전열교환기 전문 진양테크. 조용하고 쾌적한 청소 환경을 제공합니다.">
   <meta name="keywords" content="
     진양테크, 진양 테크, JINYANGTECH, JINYANG TECH,
-    중앙집중식 청소기, 중앙집중식청소기, 중앙 청소기, 중앙집중 청소기, central vacuum system, 중앙 흡입 청소기,
+    중앙집중식 청소기, 중앙집중식청소기, 중앙 청소기, 중앙집중 청소기, central vacuum system, 중앙 흡입 청소기,진양테크 청소기,
     중앙집중식 청소기 진양테크, 진양테크 중앙집중식 청소기, 중앙집중식청소기 진양테크, 진양테크 중앙집중식청소기, 중앙집중식청소기진양테크, 중앙청소기 진양테크,
     전열교환기, 전열 교환기, 환기용 전열교환기, 주택용 전열교환기, 전열환기장치, 열회수환기장치, ERV 시스템,
     전열교환기 진양테크, 진양테크 전열교환기, 전열교환기진양테크, 진양테크 전열환기, ERV 진양테크
@@ -81,10 +81,6 @@
       </li>
       <li>
         <a href="#" class="has-sub">- 전열교환기</a>
-        <ul class="sub-dropdown">
-          <li><a href="supplies_1.html">TOOL SET(악세서리)</a></li>
-          <li><a href="supplies_2.html">배관자재</a></li>
-        </ul>
       </li>
     </ul>
   </li>
@@ -138,14 +134,6 @@
     <li>
       <button class="dropdown-btn">소모품</button>
       <ul class="dropdown-content">
-        <li><a href="supplies_1.html">- TOOL SET(악세서리)</a></li>
-        <li><a href="supplies_2.html">- 배관자재</a></li>
-      </ul>
-    </li>
-
-    <li>
-      <button class="dropdown-btn">소모품</button>
-      <ul class="dropdown-content">
         <li>
           <button class="sub-dropdown-btn">- 중앙집중식 청소기</button>
           <ul class="sub-dropdown-content">
@@ -154,7 +142,7 @@
 
           </ul>
         </li>
-        <li><a href="product-types.html">- 제품 종류 및 사양</a></li>
+        <li><a href="product-types.html">- 전열교환기</a></li>
       </ul>
     </li>
 
